baza/src/markup/snapshots/baza__markup__markup_str__tests__parse_header.snap
---
source: baza/src/markup/markup_str.rs
assertion_line: 390
expression: ast
---
{
  "children": [
    {
      "children": [
        {
          "range": {
            "end": 13,
            "start": 2
          },
          "typeName": "Text",
          "value": "TEST HEADER"
        }
      ],
      "level": "H1",
      "range": {
        "end": 13,
        "start": 0
      },
      "typeName": "Heading"
    }
  ],
  "typeName": "Document"
}
