baza/src/markup/snapshots/baza__markup__markup_str__tests__parse_hr.snap
---
source: baza/src/markup/markup_str.rs
assertion_line: 412
expression: ast
---
{
  "children": [
    {
      "range": {
        "end": 3,
        "start": 0
      },
      "typeName": "Rule"
    }
  ],
  "typeName": "Document"
}
